--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,4 @@
 spring.application.name=Spring-AOP
 spring.main.banner-mode=off
 logging.level.root=warn
+logging.level.org.springframework.aop=DEBUG
